--- a/html/logout.html
+++ b/html/logout.html
@@ -13,7 +13,8 @@
     <div class="container">
         <h1>Successfully logged out Guvi user</h1>
         <p>Explore our services by  logging in.</p>
-        <div class="links">             
+        <div class="links">   
+            <a href="signup.html" class="btn btn-secondary">Signup</a>          
             <a href="login.html" class="btn btn-secondary">Login</a>
         </div>
     </div>
