--- a/html/index.html
+++ b/html/index.html
@@ -14,8 +14,8 @@
         <h1>Welcome to the Guvi user</h1>
         <p>Explore our services by signing up or logging in.</p>
         <div class="links">
-            <a href="signup.html" class="btn btn-primary">Sign Up</a>
-            <a href="login.html" class="btn btn-secondary">Login</a>
+            <a href="/html/signup.html" class="btn btn-primary">Sign Up</a>
+            <a href="/html/login.html" class="btn btn-secondary">Login</a>
         </div>
     </div>
 </body>
