--- a/html/login.html
+++ b/html/login.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">     
-    <script src="..\script\login.js"></script>
+    <script src="/script/login.js"></script>
 </head>
 <body>
     <div class="container">
