Updated Db refecter

--- a/html/signup.html
+++ b/html/signup.html
@@ -8,14 +8,13 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-
+<link rel="stylesheet" href="/css/styles.css"> 
     <script src="..\script\signup.js"></script>
     <title>Signup Page</title>
 </head>
 <body>
-    <div class="container">
-        
-       
+    <div class="container">      
+                     <h2>Signup</h2>             
 <!-- Signup form -->
 <form id="signupForm">
     <div class="form-group">
@@ -32,6 +31,6 @@
     </div>
     <button type="button" class="btn btn-primary" id="signupBtn">Sign Up</button>
 </form>
-
+</div>
 </body>
 </html>
